| Bug #20830 | INSERT DELAYED does not honour SET INSERT_ID | ||
|---|---|---|---|
| Submitted: | 3 Jul 2006 21:25 | Modified: | 5 Oct 2006 19:14 |
| Reporter: | Guilhem Bichot | ||
| Status: | Closed | ||
| Category: | Server: General | Severity: | S3 (Non-critical) |
| Version: | 5.1-bk | OS: | Linux (Linux) |
| Assigned to: | Ingo Strüwing | Target Version: | |
[3 Jul 2006 21:25]
Guilhem Bichot
[7 Jul 2006 17:52]
Calvin Sun
It is a similar problem reported in bug#20627.
[15 Sep 2006 19:50]
Ingo Strüwing
The fix for this bug is contained in the fix for Bug#20627.
[18 Sep 2006 19:02]
Ingo Strüwing
Patch approved as for Bug#20627.
[29 Sep 2006 19:24]
Ingo Strüwing
Pushed to 5.1-engines and 5.0-engines.
[3 Oct 2006 10:49]
Sergey Vojtovich
Fixed in 5.0.26, 5.1.12.
[5 Oct 2006 19:14]
Paul DuBois
Noted in 5.0.26, 5.1.12 changelogs. INSERT DELAYED did not honor SET INSERT_ID or the auto_increment_* system variables.
[26 Nov 2007 19:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/38549 ChangeSet@1.2593, 2007-11-26 19:16:23+01:00, istruewing@stella.local +2 -0 Bug#20830 - INSERT DELAYED does not honour SET INSERT_ID Bug#20627 - INSERT DELAYED does not honour auto_increment_* variables Fixed wrong variable assignment.
[28 Nov 2007 11:23]
Bugs System
Pushed into 6.0.4-alpha
[28 Nov 2007 11:25]
Bugs System
Pushed into 5.1.23-rc
[28 Nov 2007 11:27]
Bugs System
Pushed into 5.0.54
